define url params for muslim pro url request, define f(x)s for code clarity

--- a/python/jupyter notebook/request_data_muslimpro.ipynb
+++ b/python/jupyter notebook/request_data_muslimpro.ipynb
@@ -18,7 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MuslimProPlainText = (requests.get(\"https://www.muslimpro.com/en/find?coordinates=3.1499222%2C101.6944619&country_code=MY&country_name=Malaysia&city_name=Kuala+Lumpur&date=2024-01&convention=precalc\")).text"
+    "urlStr = \"https://www.muslimpro.com/en/find\"\n",
+    "urlParams = {\n",
+    "    # required\n",
+    "    \"country_code\": \"MY\",\n",
+    "    \"country_name\": \"Malaysia\",\n",
+    "    \"city_name\": \"Kuala Lumpur\",\n",
+    "    \"coordinates\": \"3.1499222,101.6944619\",\n",
+    "    # optional\n",
+    "    \"convention\": \"precalc\",\n",
+    "    \"date\": \"2024-01\"\n",
+    "}"
    ]
   },
   {
@@ -27,7 +37,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MuslimProTimeTable = (BeautifulSoup(MuslimProPlainText)).find(\"table\", { \"class\": \"prayer-times\" })"
+    "def sanitizeParamValues(value):\n",
+    "    return value.replace(\" \", \"%20\").replace(\",\", \"%2C\")\n",
+    "\n",
+    "def generateUrlReq(strUrl, dictParams):\n",
+    "    n = len(dictParams)\n",
+    "    strParams = \"\"\n",
+    "\n",
+    "    listDictParams = [param for idx, param in enumerate(dictParams.items())]\n",
+    "    for i in range(n):\n",
+    "        if (i == 0):\n",
+    "            strParams += (\"?\" + listDictParams[0][0] + \"=\" + sanitizeParamValues(listDictParams[0][1]))\n",
+    "        else:\n",
+    "            strParams += (\"&\" + listDictParams[i][0] + \"=\" + sanitizeParamValues(listDictParams[i][1]))\n",
+    "    \n",
+    "    if (n > 0):\n",
+    "        return strUrl + strParams\n",
+    "    else:\n",
+    "        return strUrl\n",
+    "\n",
+    "def extractTimesTable(sitePlainText):\n",
+    "    soup = BeautifulSoup(sitePlainText)\n",
+    "    return soup.find(\"table\", { \"class\": \"prayer-times\" })\n",
+    "\n",
+    "def parseStringIO(literalHtml):\n",
+    "    return StringIO(str(literalHtml))"
    ]
   },
   {
@@ -36,12 +70,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MuslimProDF = pd.read_html(StringIO(str(MuslimProTimeTable)))"
+    "MuslimProUrlReq = generateUrlReq(urlStr, urlParams)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MuslimProPlainText = requests.get(MuslimProUrlReq).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MuslimProTimeTable = extractTimesTable(MuslimProPlainText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MuslimProDF = pd.read_html(parseStringIO(MuslimProTimeTable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +142,7 @@
        " 30  Wed 31 Jan  06:17   07:26  13:29  16:51   19:27  20:40]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
