fix read_html extracted as list instead of dataframe

--- a/python/jupyter notebook/request_data_muslimpro.ipynb
+++ b/python/jupyter notebook/request_data_muslimpro.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MuslimProDF = pd.read_html(parseStringIO(MuslimProTimeTable))"
+    "MuslimProDF = pd.read_html(parseStringIO(MuslimProTimeTable))[0]"
    ]
   },
   {
@@ -107,39 +107,382 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Fajr</th>\n",
+       "      <th>Sunrise</th>\n",
+       "      <th>Dhuhr</th>\n",
+       "      <th>Asr</th>\n",
+       "      <th>Maghrib</th>\n",
+       "      <th>Isha'a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mon 1 Jan</td>\n",
+       "      <td>06:06</td>\n",
+       "      <td>07:17</td>\n",
+       "      <td>13:19</td>\n",
+       "      <td>16:42</td>\n",
+       "      <td>19:16</td>\n",
+       "      <td>20:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tue 2 Jan</td>\n",
+       "      <td>06:07</td>\n",
+       "      <td>07:18</td>\n",
+       "      <td>13:20</td>\n",
+       "      <td>16:42</td>\n",
+       "      <td>19:17</td>\n",
+       "      <td>20:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wed 3 Jan</td>\n",
+       "      <td>06:07</td>\n",
+       "      <td>07:18</td>\n",
+       "      <td>13:20</td>\n",
+       "      <td>16:43</td>\n",
+       "      <td>19:17</td>\n",
+       "      <td>20:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thu 4 Jan</td>\n",
+       "      <td>06:08</td>\n",
+       "      <td>07:19</td>\n",
+       "      <td>13:21</td>\n",
+       "      <td>16:43</td>\n",
+       "      <td>19:18</td>\n",
+       "      <td>20:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fri 5 Jan</td>\n",
+       "      <td>06:08</td>\n",
+       "      <td>07:19</td>\n",
+       "      <td>13:21</td>\n",
+       "      <td>16:44</td>\n",
+       "      <td>19:18</td>\n",
+       "      <td>20:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sat 6 Jan</td>\n",
+       "      <td>06:09</td>\n",
+       "      <td>07:20</td>\n",
+       "      <td>13:22</td>\n",
+       "      <td>16:44</td>\n",
+       "      <td>19:19</td>\n",
+       "      <td>20:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sun 7 Jan</td>\n",
+       "      <td>06:09</td>\n",
+       "      <td>07:20</td>\n",
+       "      <td>13:22</td>\n",
+       "      <td>16:44</td>\n",
+       "      <td>19:19</td>\n",
+       "      <td>20:34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Mon 8 Jan</td>\n",
+       "      <td>06:10</td>\n",
+       "      <td>07:20</td>\n",
+       "      <td>13:22</td>\n",
+       "      <td>16:45</td>\n",
+       "      <td>19:20</td>\n",
+       "      <td>20:34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Tue 9 Jan</td>\n",
+       "      <td>06:10</td>\n",
+       "      <td>07:21</td>\n",
+       "      <td>13:23</td>\n",
+       "      <td>16:45</td>\n",
+       "      <td>19:20</td>\n",
+       "      <td>20:34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Wed 10 Jan</td>\n",
+       "      <td>06:10</td>\n",
+       "      <td>07:21</td>\n",
+       "      <td>13:23</td>\n",
+       "      <td>16:46</td>\n",
+       "      <td>19:21</td>\n",
+       "      <td>20:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Thu 11 Jan</td>\n",
+       "      <td>06:11</td>\n",
+       "      <td>07:22</td>\n",
+       "      <td>13:24</td>\n",
+       "      <td>16:46</td>\n",
+       "      <td>19:21</td>\n",
+       "      <td>20:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Fri 12 Jan</td>\n",
+       "      <td>06:11</td>\n",
+       "      <td>07:22</td>\n",
+       "      <td>13:24</td>\n",
+       "      <td>16:46</td>\n",
+       "      <td>19:21</td>\n",
+       "      <td>20:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Sat 13 Jan</td>\n",
+       "      <td>06:12</td>\n",
+       "      <td>07:22</td>\n",
+       "      <td>13:24</td>\n",
+       "      <td>16:47</td>\n",
+       "      <td>19:22</td>\n",
+       "      <td>20:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Sun 14 Jan</td>\n",
+       "      <td>06:12</td>\n",
+       "      <td>07:23</td>\n",
+       "      <td>13:25</td>\n",
+       "      <td>16:47</td>\n",
+       "      <td>19:22</td>\n",
+       "      <td>20:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Mon 15 Jan</td>\n",
+       "      <td>06:13</td>\n",
+       "      <td>07:23</td>\n",
+       "      <td>13:25</td>\n",
+       "      <td>16:47</td>\n",
+       "      <td>19:23</td>\n",
+       "      <td>20:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Tue 16 Jan</td>\n",
+       "      <td>06:13</td>\n",
+       "      <td>07:23</td>\n",
+       "      <td>13:26</td>\n",
+       "      <td>16:48</td>\n",
+       "      <td>19:23</td>\n",
+       "      <td>20:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Wed 17 Jan</td>\n",
+       "      <td>06:13</td>\n",
+       "      <td>07:24</td>\n",
+       "      <td>13:26</td>\n",
+       "      <td>16:48</td>\n",
+       "      <td>19:23</td>\n",
+       "      <td>20:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Thu 18 Jan</td>\n",
+       "      <td>06:14</td>\n",
+       "      <td>07:24</td>\n",
+       "      <td>13:26</td>\n",
+       "      <td>16:48</td>\n",
+       "      <td>19:24</td>\n",
+       "      <td>20:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Fri 19 Jan</td>\n",
+       "      <td>06:14</td>\n",
+       "      <td>07:24</td>\n",
+       "      <td>13:26</td>\n",
+       "      <td>16:49</td>\n",
+       "      <td>19:24</td>\n",
+       "      <td>20:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Sat 20 Jan</td>\n",
+       "      <td>06:14</td>\n",
+       "      <td>07:24</td>\n",
+       "      <td>13:27</td>\n",
+       "      <td>16:49</td>\n",
+       "      <td>19:24</td>\n",
+       "      <td>20:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Sun 21 Jan</td>\n",
+       "      <td>06:15</td>\n",
+       "      <td>07:25</td>\n",
+       "      <td>13:27</td>\n",
+       "      <td>16:49</td>\n",
+       "      <td>19:25</td>\n",
+       "      <td>20:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Mon 22 Jan</td>\n",
+       "      <td>06:15</td>\n",
+       "      <td>07:25</td>\n",
+       "      <td>13:27</td>\n",
+       "      <td>16:49</td>\n",
+       "      <td>19:25</td>\n",
+       "      <td>20:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Tue 23 Jan</td>\n",
+       "      <td>06:15</td>\n",
+       "      <td>07:25</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:25</td>\n",
+       "      <td>20:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Wed 24 Jan</td>\n",
+       "      <td>06:16</td>\n",
+       "      <td>07:25</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:26</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Thu 25 Jan</td>\n",
+       "      <td>06:16</td>\n",
+       "      <td>07:25</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:26</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Fri 26 Jan</td>\n",
+       "      <td>06:16</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:28</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:26</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Sat 27 Jan</td>\n",
+       "      <td>06:17</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:29</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:27</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Sun 28 Jan</td>\n",
+       "      <td>06:17</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:29</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>19:27</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Mon 29 Jan</td>\n",
+       "      <td>06:17</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:29</td>\n",
+       "      <td>16:51</td>\n",
+       "      <td>19:27</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Tue 30 Jan</td>\n",
+       "      <td>06:17</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:29</td>\n",
+       "      <td>16:51</td>\n",
+       "      <td>19:27</td>\n",
+       "      <td>20:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Wed 31 Jan</td>\n",
+       "      <td>06:17</td>\n",
+       "      <td>07:26</td>\n",
+       "      <td>13:29</td>\n",
+       "      <td>16:51</td>\n",
+       "      <td>19:27</td>\n",
+       "      <td>20:40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[    Unnamed: 0   Fajr Sunrise  Dhuhr    Asr Maghrib Isha'a\n",
-       " 0    Mon 1 Jan  06:06   07:17  13:19  16:42   19:16  20:31\n",
-       " 1    Tue 2 Jan  06:07   07:18  13:20  16:42   19:17  20:31\n",
-       " 2    Wed 3 Jan  06:07   07:18  13:20  16:43   19:17  20:32\n",
-       " 3    Thu 4 Jan  06:08   07:19  13:21  16:43   19:18  20:32\n",
-       " 4    Fri 5 Jan  06:08   07:19  13:21  16:44   19:18  20:33\n",
-       " 5    Sat 6 Jan  06:09   07:20  13:22  16:44   19:19  20:33\n",
-       " 6    Sun 7 Jan  06:09   07:20  13:22  16:44   19:19  20:34\n",
-       " 7    Mon 8 Jan  06:10   07:20  13:22  16:45   19:20  20:34\n",
-       " 8    Tue 9 Jan  06:10   07:21  13:23  16:45   19:20  20:34\n",
-       " 9   Wed 10 Jan  06:10   07:21  13:23  16:46   19:21  20:35\n",
-       " 10  Thu 11 Jan  06:11   07:22  13:24  16:46   19:21  20:35\n",
-       " 11  Fri 12 Jan  06:11   07:22  13:24  16:46   19:21  20:35\n",
-       " 12  Sat 13 Jan  06:12   07:22  13:24  16:47   19:22  20:36\n",
-       " 13  Sun 14 Jan  06:12   07:23  13:25  16:47   19:22  20:36\n",
-       " 14  Mon 15 Jan  06:13   07:23  13:25  16:47   19:23  20:36\n",
-       " 15  Tue 16 Jan  06:13   07:23  13:26  16:48   19:23  20:37\n",
-       " 16  Wed 17 Jan  06:13   07:24  13:26  16:48   19:23  20:37\n",
-       " 17  Thu 18 Jan  06:14   07:24  13:26  16:48   19:24  20:37\n",
-       " 18  Fri 19 Jan  06:14   07:24  13:26  16:49   19:24  20:37\n",
-       " 19  Sat 20 Jan  06:14   07:24  13:27  16:49   19:24  20:38\n",
-       " 20  Sun 21 Jan  06:15   07:25  13:27  16:49   19:25  20:38\n",
-       " 21  Mon 22 Jan  06:15   07:25  13:27  16:49   19:25  20:38\n",
-       " 22  Tue 23 Jan  06:15   07:25  13:28  16:50   19:25  20:38\n",
-       " 23  Wed 24 Jan  06:16   07:25  13:28  16:50   19:26  20:39\n",
-       " 24  Thu 25 Jan  06:16   07:25  13:28  16:50   19:26  20:39\n",
-       " 25  Fri 26 Jan  06:16   07:26  13:28  16:50   19:26  20:39\n",
-       " 26  Sat 27 Jan  06:17   07:26  13:29  16:50   19:27  20:39\n",
-       " 27  Sun 28 Jan  06:17   07:26  13:29  16:50   19:27  20:39\n",
-       " 28  Mon 29 Jan  06:17   07:26  13:29  16:51   19:27  20:39\n",
-       " 29  Tue 30 Jan  06:17   07:26  13:29  16:51   19:27  20:39\n",
-       " 30  Wed 31 Jan  06:17   07:26  13:29  16:51   19:27  20:40]"
+       "    Unnamed: 0   Fajr Sunrise  Dhuhr    Asr Maghrib Isha'a\n",
+       "0    Mon 1 Jan  06:06   07:17  13:19  16:42   19:16  20:31\n",
+       "1    Tue 2 Jan  06:07   07:18  13:20  16:42   19:17  20:31\n",
+       "2    Wed 3 Jan  06:07   07:18  13:20  16:43   19:17  20:32\n",
+       "3    Thu 4 Jan  06:08   07:19  13:21  16:43   19:18  20:32\n",
+       "4    Fri 5 Jan  06:08   07:19  13:21  16:44   19:18  20:33\n",
+       "5    Sat 6 Jan  06:09   07:20  13:22  16:44   19:19  20:33\n",
+       "6    Sun 7 Jan  06:09   07:20  13:22  16:44   19:19  20:34\n",
+       "7    Mon 8 Jan  06:10   07:20  13:22  16:45   19:20  20:34\n",
+       "8    Tue 9 Jan  06:10   07:21  13:23  16:45   19:20  20:34\n",
+       "9   Wed 10 Jan  06:10   07:21  13:23  16:46   19:21  20:35\n",
+       "10  Thu 11 Jan  06:11   07:22  13:24  16:46   19:21  20:35\n",
+       "11  Fri 12 Jan  06:11   07:22  13:24  16:46   19:21  20:35\n",
+       "12  Sat 13 Jan  06:12   07:22  13:24  16:47   19:22  20:36\n",
+       "13  Sun 14 Jan  06:12   07:23  13:25  16:47   19:22  20:36\n",
+       "14  Mon 15 Jan  06:13   07:23  13:25  16:47   19:23  20:36\n",
+       "15  Tue 16 Jan  06:13   07:23  13:26  16:48   19:23  20:37\n",
+       "16  Wed 17 Jan  06:13   07:24  13:26  16:48   19:23  20:37\n",
+       "17  Thu 18 Jan  06:14   07:24  13:26  16:48   19:24  20:37\n",
+       "18  Fri 19 Jan  06:14   07:24  13:26  16:49   19:24  20:37\n",
+       "19  Sat 20 Jan  06:14   07:24  13:27  16:49   19:24  20:38\n",
+       "20  Sun 21 Jan  06:15   07:25  13:27  16:49   19:25  20:38\n",
+       "21  Mon 22 Jan  06:15   07:25  13:27  16:49   19:25  20:38\n",
+       "22  Tue 23 Jan  06:15   07:25  13:28  16:50   19:25  20:38\n",
+       "23  Wed 24 Jan  06:16   07:25  13:28  16:50   19:26  20:39\n",
+       "24  Thu 25 Jan  06:16   07:25  13:28  16:50   19:26  20:39\n",
+       "25  Fri 26 Jan  06:16   07:26  13:28  16:50   19:26  20:39\n",
+       "26  Sat 27 Jan  06:17   07:26  13:29  16:50   19:27  20:39\n",
+       "27  Sun 28 Jan  06:17   07:26  13:29  16:50   19:27  20:39\n",
+       "28  Mon 29 Jan  06:17   07:26  13:29  16:51   19:27  20:39\n",
+       "29  Tue 30 Jan  06:17   07:26  13:29  16:51   19:27  20:39\n",
+       "30  Wed 31 Jan  06:17   07:26  13:29  16:51   19:27  20:40"
       ]
      },
      "execution_count": 8,
