add cells on df INSERT INTO db table using pyodbc

--- a/python/jupyter notebook/request_Data_esolatjakim.ipynb
+++ b/python/jupyter notebook/request_Data_esolatjakim.ipynb
@@ -75,33 +75,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2018 = { \"datestart\": \"2018-01-01\", \"dateend\": \"2018-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2018 = getDataFrameFromReq(urlStr, urlParams, urlData2018)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2018 = parseDfForDB(eSolatDataFrame2018)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -254,45 +227,21 @@
        "[365 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2018 = { \"datestart\": \"2018-01-01\", \"dateend\": \"2018-12-31\" }\n",
+    "eSolatDataFrame2018 = getDataFrameFromReq(urlStr, urlParams, urlData2018)\n",
+    "df2018 = parseDfForDB(eSolatDataFrame2018)\n",
     "df2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2019 = { \"datestart\": \"2019-01-01\", \"dateend\": \"2019-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2019 = getDataFrameFromReq(urlStr, urlParams, urlData2019)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2019 = parseDfForDB(eSolatDataFrame2019)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -446,45 +395,21 @@
        "[365 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2019 = { \"datestart\": \"2019-01-01\", \"dateend\": \"2019-12-31\" }\n",
+    "eSolatDataFrame2019 = getDataFrameFromReq(urlStr, urlParams, urlData2019)\n",
+    "df2019 = parseDfForDB(eSolatDataFrame2019)\n",
     "df2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2020 = { \"datestart\": \"2020-01-01\", \"dateend\": \"2020-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2020 = getDataFrameFromReq(urlStr, urlParams, urlData2020)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2020 = parseDfForDB(eSolatDataFrame2020)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -638,45 +563,21 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2020 = { \"datestart\": \"2020-01-01\", \"dateend\": \"2020-12-31\" }\n",
+    "eSolatDataFrame2020 = getDataFrameFromReq(urlStr, urlParams, urlData2020)\n",
+    "df2020 = parseDfForDB(eSolatDataFrame2020)\n",
     "df2020"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2021 = { \"datestart\": \"2021-01-01\", \"dateend\": \"2021-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2021 = getDataFrameFromReq(urlStr, urlParams, urlData2021)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2021 = parseDfForDB(eSolatDataFrame2021)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -830,45 +731,21 @@
        "[365 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2021 = { \"datestart\": \"2021-01-01\", \"dateend\": \"2021-12-31\" }\n",
+    "eSolatDataFrame2021 = getDataFrameFromReq(urlStr, urlParams, urlData2021)\n",
+    "df2021 = parseDfForDB(eSolatDataFrame2021)\n",
     "df2021"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2022 = { \"datestart\": \"2022-01-01\", \"dateend\": \"2022-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2022 = getDataFrameFromReq(urlStr, urlParams, urlData2022)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2022 = parseDfForDB(eSolatDataFrame2022)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1022,45 +899,21 @@
        "[365 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2022 = { \"datestart\": \"2022-01-01\", \"dateend\": \"2022-12-31\" }\n",
+    "eSolatDataFrame2022 = getDataFrameFromReq(urlStr, urlParams, urlData2022)\n",
+    "df2022 = parseDfForDB(eSolatDataFrame2022)\n",
     "df2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2023 = { \"datestart\": \"2023-01-01\", \"dateend\": \"2023-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2023 = getDataFrameFromReq(urlStr, urlParams, urlData2023)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2023 = parseDfForDB(eSolatDataFrame2023)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1214,45 +1067,21 @@
        "[365 rows x 6 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2023 = { \"datestart\": \"2023-01-01\", \"dateend\": \"2023-12-31\" }\n",
+    "eSolatDataFrame2023 = getDataFrameFromReq(urlStr, urlParams, urlData2023)\n",
+    "df2023 = parseDfForDB(eSolatDataFrame2023)\n",
     "df2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urlData2024 = { \"datestart\": \"2024-01-01\", \"dateend\": \"2024-12-31\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eSolatDataFrame2024 = getDataFrameFromReq(urlStr, urlParams, urlData2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2024 = parseDfForDB(eSolatDataFrame2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1406,13 +1235,229 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "urlData2024 = { \"datestart\": \"2024-01-01\", \"dateend\": \"2024-12-31\" }\n",
+    "eSolatDataFrame2024 = getDataFrameFromReq(urlStr, urlParams, urlData2024)\n",
+    "df2024 = parseDfForDB(eSolatDataFrame2024)\n",
     "df2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>fajr</th>\n",
+       "      <th>zuhr</th>\n",
+       "      <th>asr</th>\n",
+       "      <th>maghrib</th>\n",
+       "      <th>isha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>05:59:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>05:59:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2552</th>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2553</th>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2554</th>\n",
+       "      <td>2024-12-29</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2555</th>\n",
+       "      <td>2024-12-30</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2556</th>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2557 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date      fajr      zuhr       asr   maghrib      isha\n",
+       "0     2018-01-01  05:58:00  13:19:00  16:42:00  19:16:00  20:30:00\n",
+       "1     2018-01-02  05:58:00  13:20:00  16:42:00  19:16:00  20:31:00\n",
+       "2     2018-01-03  05:59:00  13:20:00  16:43:00  19:17:00  20:31:00\n",
+       "3     2018-01-04  05:59:00  13:21:00  16:43:00  19:17:00  20:32:00\n",
+       "4     2018-01-05  06:00:00  13:21:00  16:44:00  19:18:00  20:32:00\n",
+       "...          ...       ...       ...       ...       ...       ...\n",
+       "2552  2024-12-27  06:04:00  13:17:00  16:40:00  19:14:00  20:29:00\n",
+       "2553  2024-12-28  06:05:00  13:18:00  16:40:00  19:15:00  20:30:00\n",
+       "2554  2024-12-29  06:05:00  13:18:00  16:41:00  19:15:00  20:30:00\n",
+       "2555  2024-12-30  06:06:00  13:19:00  16:41:00  19:16:00  20:30:00\n",
+       "2556  2024-12-31  06:06:00  13:19:00  16:42:00  19:16:00  20:31:00\n",
+       "\n",
+       "[2557 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2db = pd.concat([df2018,df2019,df2020,df2021,df2022,df2023,df2024], ignore_index=True)\n",
+    "df2db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## use library pyodbc to insert data into data warehouse\n",
+    "import pyodbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## generate conn string for the pyodbc connection\n",
+    "connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## establish connection to the database\n",
+    "conn = pyodbc.connect(connStr)\n",
+    "# cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## iterate rows of data frame for INSERT query\n",
+    "# for idx, row in df2db.iterrows():\n",
+    "#     cursor.execute(\"INSERT INTO [dbo].[t_time_prayer_source_1] ([time_date],[time_fajr],[time_zuhr],[time_asr],[time_maghrib],[time_isha]) VALUES (?,?,?,?,?,?)\", row[\"date\"], row[\"fajr\"], row[\"zuhr\"], row[\"asr\"], row[\"maghrib\"], row[\"isha\"])\n",
+    "\n",
+    "## DON'T FORGET to commit query transaction!\n",
+    "# conn.commit()\n",
+    "## ALSO DON'T FORGET to close the connection after done!\n",
+    "# cursor.close()"
    ]
   }
  ],
