close pyodbc conn properly in esolatjakim notebook

--- a/python/jupyter notebook/request_Data_esolatjakim.ipynb
+++ b/python/jupyter notebook/request_Data_esolatjakim.ipynb
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1457,8 @@
     "## DON'T FORGET to commit query transaction!\n",
     "# conn.commit()\n",
     "## ALSO DON'T FORGET to close the connection after done!\n",
-    "# cursor.close()"
+    "# cursor.close()\n",
+    "# conn.close()"
    ]
   }
  ],
